# jerry

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  geometry.rs  lib.rs  main.rs  mouse.rs
src/monitor/: structs.rs  utils.rs
